# codespy

./: .gitignore  DOCS.md  LICENSE  MANIFEST.in  README.md  action.yml  codespy.py  entrypoint.sh  pyproject.toml  test_codespy.py
.github/workflows/: example-security-scan.yml  publish.yml  tests.yml
