[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codespy"
version = "1.1.0"
description = "Fast, offline code security scanner and quality analyzer. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "Adam (wisent-ai)", email = "adam@wisent.ai" },
]
keywords = [
    "security",
    "scanner",
    "code-analysis",
    "sast",
    "vulnerability",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/wisent-ai/codespy"
Repository = "https://github.com/wisent-ai/codespy"
Issues = "https://github.com/wisent-ai/codespy/issues"

[project.scripts]
codespy = "codespy:main"

[tool.setuptools]
py-modules = ["codespy"]
